force-app/main/default/objects/Vendor__c/fields/Bank_Account_Details__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Details__c</fullName>
    <description>Vendor’s payment account details</description>
    <label>Bank Account Details</label>
    <length>50</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>