force-app/main/default/objects/Vendor__c/fields/Contract_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiry_Date__c</fullName>
    <label>Contract Expiry Date</label>
    <type>Date</type>
</CustomField>