force-app/main/default/objects/Vendor__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INDIA</fullName>
            </value>
            <value>
                <fullName>SRILANKA</fullName>
            </value>
            <value>
                <fullName>PAKISTAN</fullName>
            </value>
            <value>
                <fullName>ENGLAND</fullName>
            </value>
            <value>
                <fullName>AUSTRALIA</fullName>
            </value>
            <value>
                <fullName>BANGLADESH</fullName>
            </value>
            <value>
                <fullName>CHINA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>