force-app/main/default/objects/Vendor__c/fields/PAN_TIN_Number__c.field-meta.xml
<CustomField>
    <fullName>PAN_TIN_Number__c</fullName>
    <label>PAN/TIN Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>