force-app/main/default/objects/Vendor__c/fields/Preferred_Currency__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Currency__c</fullName>
    <label>Preferred Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INR</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>