force-app/main/default/objects/Vendor__c/fields/Region_State__c.field-meta.xml
<CustomField>
    <fullName>Region_State__c</fullName>
    <label>Region/State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANDHARA PRADESH</fullName>
            </value>
            <value>
                <fullName>TELANGANA</fullName>
            </value>
            <value>
                <fullName>KARNATAKA</fullName>
            </value>
            <value>
                <fullName>KERALA</fullName>
            </value>
            <value>
                <fullName>TAMILNADU</fullName>
            </value>
            <value>
                <fullName>MAHARASHTRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>