force-app/main/default/objects/Vendor__c/fields/Tax_ID_GST_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_GST_Number__c</fullName>
    <label>Tax ID/GST Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>