force-app/main/default/objects/Vendor__c/fields/Total_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Spend__c</fullName>
    <label>Total Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>