force-app/main/default/objects/Vendor__c/fields/Vendor_Category__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Category__c</fullName>
    <label>Vendor Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT Services</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>