force-app/main/default/objects/Vendor__c/fields/Vendor_Code__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Code__c</fullName>
    <displayFormat>V-{0000}</displayFormat>
    <label>Vendor Code</label>
    <type>AutoNumber</type>
</CustomField>